kyumin/grammar/KyuminParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .KyuminListener import KyuminListener
else:
    from KyuminListener import KyuminListener


class KyuminParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'{'", u"'}'", u"'if'", u"'else'", u"'while'", 
                     u"';'", u"'['", u"','", u"']'", u"':'", u"'.'", u"'('", 
                     u"')'", u"'*'", u"'/'", u"'//'", u"'%'", u"'+'", u"'-'", 
                     u"'<'", u"'<='", u"'>'", u"'>='", u"':='", u"'='", 
                     u"'\\'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"FLOAT", 
                      u"INT", u"STR", u"NAME", u"CMT", u"WS" ]

    RULE_start = 0
    RULE_ss = 1
    RULE_b = 2
    RULE_s = 3
    RULE_e = 4

    ruleNames =  [ "start", "ss", "b", "s", "e" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    FLOAT=27
    INT=28
    STR=29
    NAME=30
    CMT=31
    WS=32

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ss(self):
            return self.getTypedRuleContext(KyuminParser.SsContext,0)


        def EOF(self):
            return self.getToken(KyuminParser.EOF, 0)

        def getRuleIndex(self):
            return KyuminParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitStart(self)




    def start(self):

        localctx = KyuminParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self.ss()
            self.state = 11
            self.match(KyuminParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KyuminParser.SContext)
            else:
                return self.getTypedRuleContext(KyuminParser.SContext,i)


        def getRuleIndex(self):
            return KyuminParser.RULE_ss

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterSs(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitSs(self)




    def ss(self):

        localctx = KyuminParser.SsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ss)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KyuminParser.T__0) | (1 << KyuminParser.T__2) | (1 << KyuminParser.T__4) | (1 << KyuminParser.T__5) | (1 << KyuminParser.T__6) | (1 << KyuminParser.T__25) | (1 << KyuminParser.FLOAT) | (1 << KyuminParser.INT) | (1 << KyuminParser.STR) | (1 << KyuminParser.NAME))) != 0):
                self.state = 13
                self.s()
                self.state = 18
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KyuminParser.SContext)
            else:
                return self.getTypedRuleContext(KyuminParser.SContext,i)


        def getRuleIndex(self):
            return KyuminParser.RULE_b

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterB(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitB(self)




    def b(self):

        localctx = KyuminParser.BContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_b)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(KyuminParser.T__0)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KyuminParser.T__0) | (1 << KyuminParser.T__2) | (1 << KyuminParser.T__4) | (1 << KyuminParser.T__5) | (1 << KyuminParser.T__6) | (1 << KyuminParser.T__25) | (1 << KyuminParser.FLOAT) | (1 << KyuminParser.INT) | (1 << KyuminParser.STR) | (1 << KyuminParser.NAME))) != 0):
                self.state = 20
                self.s()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(KyuminParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KyuminParser.RULE_s

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NoOpContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.SContext)
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterNoOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitNoOp(self)


    class BlockStmtContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.SContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def b(self):
            return self.getTypedRuleContext(KyuminParser.BContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitBlockStmt(self)


    class ExprContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.SContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self):
            return self.getTypedRuleContext(KyuminParser.EContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitExpr(self)


    class WhileContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.SContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self):
            return self.getTypedRuleContext(KyuminParser.EContext,0)

        def b(self):
            return self.getTypedRuleContext(KyuminParser.BContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitWhile(self)


    class IfElseContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.SContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self):
            return self.getTypedRuleContext(KyuminParser.EContext,0)

        def b(self):
            return self.getTypedRuleContext(KyuminParser.BContext,0)

        def s(self):
            return self.getTypedRuleContext(KyuminParser.SContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterIfElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitIfElse(self)


    class IfContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.SContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self):
            return self.getTypedRuleContext(KyuminParser.EContext,0)

        def b(self):
            return self.getTypedRuleContext(KyuminParser.BContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitIf(self)



    def s(self):

        localctx = KyuminParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_s)
        try:
            self.state = 47
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = KyuminParser.BlockStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.b()
                pass

            elif la_ == 2:
                localctx = KyuminParser.IfElseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.match(KyuminParser.T__2)
                self.state = 30
                self.e(0)
                self.state = 31
                self.b()
                self.state = 32
                self.match(KyuminParser.T__3)
                self.state = 33
                self.s()
                pass

            elif la_ == 3:
                localctx = KyuminParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.match(KyuminParser.T__2)
                self.state = 36
                self.e(0)
                self.state = 37
                self.b()
                pass

            elif la_ == 4:
                localctx = KyuminParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                self.match(KyuminParser.T__4)
                self.state = 40
                self.e(0)
                self.state = 41
                self.b()
                pass

            elif la_ == 5:
                localctx = KyuminParser.ExprContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 43
                self.e(0)
                self.state = 44
                self.match(KyuminParser.T__5)
                pass

            elif la_ == 6:
                localctx = KyuminParser.NoOpContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 46
                self.match(KyuminParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return KyuminParser.RULE_e

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DeclContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(KyuminParser.NAME, 0)
        def e(self):
            return self.getTypedRuleContext(KyuminParser.EContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitDecl(self)


    class GetItemContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KyuminParser.EContext)
            else:
                return self.getTypedRuleContext(KyuminParser.EContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterGetItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitGetItem(self)


    class FloatContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(KyuminParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterFloat(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitFloat(self)


    class ListContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KyuminParser.EContext)
            else:
                return self.getTypedRuleContext(KyuminParser.EContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitList(self)


    class IntContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(KyuminParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitInt(self)


    class StrContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def STR(self):
            return self.getToken(KyuminParser.STR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterStr(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitStr(self)


    class CallContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KyuminParser.EContext)
            else:
                return self.getTypedRuleContext(KyuminParser.EContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitCall(self)


    class LambdaContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.var = None # Token
            self.copyFrom(ctx)

        def b(self):
            return self.getTypedRuleContext(KyuminParser.BContext,0)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(KyuminParser.NAME)
            else:
                return self.getToken(KyuminParser.NAME, i)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterLambda(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitLambda(self)


    class NameContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(KyuminParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitName(self)


    class DictContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KyuminParser.EContext)
            else:
                return self.getTypedRuleContext(KyuminParser.EContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterDict(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitDict(self)


    class AttrAssignContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KyuminParser.EContext)
            else:
                return self.getTypedRuleContext(KyuminParser.EContext,i)

        def NAME(self):
            return self.getToken(KyuminParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterAttrAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitAttrAssign(self)


    class BlockExprContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def b(self):
            return self.getTypedRuleContext(KyuminParser.BContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterBlockExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitBlockExpr(self)


    class AttrContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self):
            return self.getTypedRuleContext(KyuminParser.EContext,0)

        def NAME(self):
            return self.getToken(KyuminParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterAttr(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitAttr(self)


    class BinopContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KyuminParser.EContext)
            else:
                return self.getTypedRuleContext(KyuminParser.EContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterBinop(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitBinop(self)


    class SetItemContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KyuminParser.EContext)
            else:
                return self.getTypedRuleContext(KyuminParser.EContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterSetItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitSetItem(self)


    class AssignContext(EContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a KyuminParser.EContext)
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(KyuminParser.NAME, 0)
        def e(self):
            return self.getTypedRuleContext(KyuminParser.EContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, KyuminListener ):
                listener.exitAssign(self)



    def e(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = KyuminParser.EContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_e, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = KyuminParser.DeclContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 50
                self.match(KyuminParser.NAME)
                self.state = 51
                self.match(KyuminParser.T__23)
                self.state = 52
                self.e(5)
                pass

            elif la_ == 2:
                localctx = KyuminParser.AssignContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 53
                self.match(KyuminParser.NAME)
                self.state = 54
                self.match(KyuminParser.T__24)
                self.state = 55
                self.e(4)
                pass

            elif la_ == 3:
                localctx = KyuminParser.StrContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 56
                self.match(KyuminParser.STR)
                pass

            elif la_ == 4:
                localctx = KyuminParser.FloatContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 57
                self.match(KyuminParser.FLOAT)
                pass

            elif la_ == 5:
                localctx = KyuminParser.IntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 58
                self.match(KyuminParser.INT)
                pass

            elif la_ == 6:
                localctx = KyuminParser.NameContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 59
                self.match(KyuminParser.NAME)
                pass

            elif la_ == 7:
                localctx = KyuminParser.BlockExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 60
                self.b()
                pass

            elif la_ == 8:
                localctx = KyuminParser.ListContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 61
                self.match(KyuminParser.T__6)
                self.state = 70
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KyuminParser.T__0) | (1 << KyuminParser.T__6) | (1 << KyuminParser.T__25) | (1 << KyuminParser.FLOAT) | (1 << KyuminParser.INT) | (1 << KyuminParser.STR) | (1 << KyuminParser.NAME))) != 0):
                    self.state = 62
                    self.e(0)
                    self.state = 67
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==KyuminParser.T__7:
                        self.state = 63
                        self.match(KyuminParser.T__7)
                        self.state = 64
                        self.e(0)
                        self.state = 69
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 72
                self.match(KyuminParser.T__8)
                pass

            elif la_ == 9:
                localctx = KyuminParser.DictContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 73
                self.match(KyuminParser.T__0)
                self.state = 87
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KyuminParser.T__0) | (1 << KyuminParser.T__6) | (1 << KyuminParser.T__25) | (1 << KyuminParser.FLOAT) | (1 << KyuminParser.INT) | (1 << KyuminParser.STR) | (1 << KyuminParser.NAME))) != 0):
                    self.state = 74
                    self.e(0)
                    self.state = 75
                    self.match(KyuminParser.T__9)
                    self.state = 76
                    self.e(0)
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==KyuminParser.T__7:
                        self.state = 77
                        self.match(KyuminParser.T__7)
                        self.state = 78
                        self.e(0)
                        self.state = 79
                        self.match(KyuminParser.T__9)
                        self.state = 80
                        self.e(0)
                        self.state = 86
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 89
                self.match(KyuminParser.T__1)
                pass

            elif la_ == 10:
                localctx = KyuminParser.LambdaContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 90
                self.match(KyuminParser.T__25)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==KyuminParser.NAME:
                    self.state = 91
                    self.match(KyuminParser.NAME)
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 99
                _la = self._input.LA(1)
                if _la==KyuminParser.T__13:
                    self.state = 97
                    self.match(KyuminParser.T__13)
                    self.state = 98
                    localctx.var = self.match(KyuminParser.NAME)


                self.state = 101
                self.b()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 146
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = KyuminParser.BinopContext(self, KyuminParser.EContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_e)
                        self.state = 104
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 105
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KyuminParser.T__13) | (1 << KyuminParser.T__14) | (1 << KyuminParser.T__15) | (1 << KyuminParser.T__16))) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 106
                        self.e(9)
                        pass

                    elif la_ == 2:
                        localctx = KyuminParser.BinopContext(self, KyuminParser.EContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_e)
                        self.state = 107
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 108
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==KyuminParser.T__17 or _la==KyuminParser.T__18):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 109
                        self.e(8)
                        pass

                    elif la_ == 3:
                        localctx = KyuminParser.BinopContext(self, KyuminParser.EContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_e)
                        self.state = 110
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 111
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << KyuminParser.T__19) | (1 << KyuminParser.T__20) | (1 << KyuminParser.T__21) | (1 << KyuminParser.T__22))) != 0)):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 112
                        self.e(7)
                        pass

                    elif la_ == 4:
                        localctx = KyuminParser.AttrAssignContext(self, KyuminParser.EContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_e)
                        self.state = 113
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 114
                        self.match(KyuminParser.T__10)
                        self.state = 115
                        self.match(KyuminParser.NAME)
                        self.state = 116
                        self.match(KyuminParser.T__24)
                        self.state = 117
                        self.e(4)
                        pass

                    elif la_ == 5:
                        localctx = KyuminParser.SetItemContext(self, KyuminParser.EContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_e)
                        self.state = 118
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 119
                        self.match(KyuminParser.T__6)
                        self.state = 120
                        self.e(0)
                        self.state = 121
                        self.match(KyuminParser.T__8)
                        self.state = 122
                        self.match(KyuminParser.T__24)
                        self.state = 123
                        self.e(3)
                        pass

                    elif la_ == 6:
                        localctx = KyuminParser.AttrContext(self, KyuminParser.EContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_e)
                        self.state = 125
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 126
                        self.match(KyuminParser.T__10)
                        self.state = 127
                        self.match(KyuminParser.NAME)
                        pass
